--- a/express/index.html
+++ b/express/index.html
@@ -46,7 +46,7 @@
   <!-- <div class="title">It would be awesome to have <br> a login form here</div> -->
   <script>
   function getParameterByName(name, url) {
-    if (!url) url = window.location.href;
+    if (!url) url = wwindow.location.origin;
     name = name.replace(/[\[\]]/g, '\\$&');
     var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
         results = regex.exec(url);
@@ -65,7 +65,7 @@
       var oktaSignIn = new OktaSignIn({
       baseUrl: orgUrl,
       logo: 'https://static.websteronline.com/edge/c/ep/77/wolstatic/images/warp/webster-monogram.svg',
-      redirectUri: window.location.href+'websterBank/websterBankCallback',
+      redirectUri: window.location.origin+'websterBank/websterBankCallback',
       clientId:'0oaaev18b8ILWObsx2p7',
       authParams: {
         issuer: 'https://login.vigneshl.com/oauth2/default',
