--- a/express/callback.html
+++ b/express/callback.html
@@ -47,13 +47,15 @@
   <div id="okta-login-container"></div>
 
   <div class="footer">
-    Copyright 2010-2020 Okta Ice. All rights reserved.
+    Copyright 2010-2020 Okta. All rights reserved.
   </div>
 
   <div class="editable" contenteditable="true"  id="idToken">
   </div>
+  <br>
   <div class="editable" contenteditable="true" id="accessToken">
   </div>
+  <br>
   <div class="editable" contenteditable="true" id="refreshToken">
   </div>
 
