--- a/express/callback.html
+++ b/express/callback.html
@@ -47,7 +47,7 @@
   <div id="okta-login-container"></div>
 
   <div class="footer">
-    Copyright 2010-2020 Okta. All rights reserved.
+    Demo Application. Powered by Okta.
   </div>
 
   <div class="editable" contenteditable="true"  id="idToken">
