--- a/express/index.html
+++ b/express/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Demo App</title>
 
 	<!-- Okta Sign-In Widget: Core js and css -->
 
@@ -57,7 +58,7 @@
   <div id="okta-login-container"></div>
 
   <div class="footer">
-    Copyright 2010-2020 Okta. All rights reserved.
+    Demo Application. Powered by Okta
   </div>
 
   <script type="text/javascript">
