--- a/express/callback.html
+++ b/express/callback.html
@@ -107,7 +107,7 @@
             "secure": true
           },
           "tokenManager": {
-            "autoRenew": false,
+            "autoRenew": true,
             "storage": "localStorage",
             "expireEarlySeconds": "240"
           }
