--- a/express/callback.html
+++ b/express/callback.html
@@ -52,7 +52,7 @@
   </div> -->
   <div style="display: flex;  flex-flow: row;  max-width: fit-content;  ">
   <h3 style="margin-left: 15px;color: white;">ID Token</h3>
-  <h3 style="margin-left: 55%; position: fixed;color: white;">Access Token</h3>
+  <h3 style="margin-left: 50%; position: absolute;color: white;">Access Token</h3>
 </div>
   <div style="display: flex;  flex-flow: row;  max-width: fit-content;  ">
 
